cluster/apps/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant-relay
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: http
